# airdrop

./: .gitignore
merkle_tree/: Cargo.toml
merkle_tree/pkg/: merkle_tree.d.ts  merkle_tree.js  merkle_tree_bg.js  package.json
merkle_tree/src/: lib.rs  main.rs
src/: README.md  lib.rs
