[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9.88"
wasm-pack = "0.11.1"
wasm-bindgen = "0.2.86"
